--- a/project_extended/views/project_task.xml
+++ b/project_extended/views/project_task.xml
@@ -8,79 +8,92 @@
             <field name="type">tree</field>
             <field name="inherit_id" ref="project.view_task_tree2"/>
             <field name="arch" type="xml">
-                <field name = "name"  position="after">
-                        <field name="priority" />
-                        <field name="date_deadline"/>
+                <field name="name" position="after">
+                    <field name="priority"/>
+                    <field name="date_deadline"/>
                 </field>
                 <field name="project_id" position="replace"/>
             </field>
         </record>
-        
+
         <record id="project.view_task_tree2" model="ir.ui.view">
             <field name="name">project.task.tree</field>
             <field name="model">project.task</field>
             <field name="type">tree</field>
             <field eval="2" name="priority"/>
             <field name="arch" type="xml">
-                <tree colors="grey:state in ('cancelled','done');blue:state == 'pending';red:date_deadline and (date_deadline&lt;current_date) and (state in ('draft','pending','open'))" string="Tasks">
+                <tree colors="grey:state in ('cancelled','done');blue:state == 'pending';red:date_deadline and (date_deadline&lt;current_date) and (state in ('draft','pending','open'))"
+                      string="Tasks">
                     <field name="sequence" invisible="not context.get('seq_visible', False)"/>
                     <field name="name"/>
                     <field name="project_id" icon="gtk-indent" invisible="context.get('user_invisible', False)"/>
                     <field name="user_id" invisible="context.get('user_invisible', False)"/>
                     <field name="delegated_user_id" invisible="context.get('show_delegated', True)"/>
                     <field name="total_hours" invisible="1"/>
-                    <field name="planned_hours" widget="float_time" invisible="context.get('set_visible',False)" />
+                    <field name="planned_hours" widget="float_time" invisible="context.get('set_visible',False)"/>
                     <field name="effective_hours" widget="float_time" sum="Spent Hours" invisible="1"/>
-                    <field name="remaining_hours" widget="float_time" sum="Remaining Hours" on_change="onchange_remaining(remaining_hours,planned_hours)" invisible="context.get('set_visible',False)"/>
+                    <field name="remaining_hours" widget="float_time" sum="Remaining Hours"
+                           on_change="onchange_remaining(remaining_hours,planned_hours)"
+                           invisible="context.get('set_visible',False)"/>
                     <field name="date_deadline" invisible="context.get('deadline_visible',True)"/>
                     <field name="type_id" groups="base.group_extended" invisible="context.get('set_visible',False)"/>
                     <button name="next_type" invisible="context.get('set_visible',False)"
-                        states="draft,open,pending"
-                        string="Change Stage"
-                        type="object"
-                        icon="gtk-go-forward"
-                        groups="base.group_extended"
-                        help="Change Type"/>
-                    <field name="date_start" />
-                    <field name="date_end" />
-                    <field name="progress" widget="progressbar" invisible="context.get('set_visible',False)" groups="base.group_extended"/>
+                            states="draft,open,pending"
+                            string="Change Stage"
+                            type="object"
+                            icon="gtk-go-forward"
+                            groups="base.group_extended"
+                            help="Change Type"/>
+                    <field name="date_start"/>
+                    <field name="date_end"/>
+                    <field name="progress" widget="progressbar" invisible="context.get('set_visible',False)"
+                           groups="base.group_extended"/>
                     <field name="state" invisible="context.get('set_visible',False)"/>
-                    <button name="do_open" states="pending,draft,done,cancelled" string="Start Task" type="object" icon="gtk-media-play" help="For changing to open state" invisible="context.get('set_visible',False)" groups="project.group_project_manager"/>
-                    <button  name="%(project.action_project_task_delegate)d" states="pending,open,draft" string="Delegate" type="action" icon="terp-personal" help="For changing to delegate state" groups="project.group_project_manager"/>
-                    <button name="action_close" states="draft,pending,open" string="Done" type="object" icon="terp-dialog-close" help="For changing to done state" groups="project.group_project_manager"/>
+                    <button name="do_open" states="pending,draft,done,cancelled" string="Start Task" type="object"
+                            icon="gtk-media-play" help="For changing to open state"
+                            invisible="context.get('set_visible',False)" groups="project.group_project_manager"/>
+                    <button name="%(project.action_project_task_delegate)d" states="pending,open,draft"
+                            string="Delegate" type="action" icon="terp-personal" help="For changing to delegate state"
+                            groups="project.group_project_manager"/>
+                    <button name="action_close" states="draft,pending,open" string="Done" type="object"
+                            icon="terp-dialog-close" help="For changing to done state"
+                            groups="project.group_project_manager"/>
                 </tree>
             </field>
         </record>
-        
+
         <record id="view_project_tasks_tab2" model="ir.ui.view">
             <field name="name">project.tasks.tree</field>
             <field name="model">project.task</field>
             <field name="type">tree</field>
             <field name="inherit_id" ref="project_extended.view_project_tasks_tab"/>
             <field name="arch" type="xml">
-                <field name = "name"  position="before">
-                        <field name="project_id" />
+                <field name="name" position="before">
+                    <field name="project_id"/>
                 </field>
             </field>
         </record>
-        
+
         <record id="view_project_tasks_form_tab" model="ir.ui.view">
             <field name="name">project.tasks.form</field>
             <field name="model">project.task</field>
             <field name="type">form</field>
             <field name="inherit_id" ref="project.view_task_form2"/>
             <field name="arch" type="xml">
-                <field name = "user_id" position="attributes" >
+                <field name="project_id" position="attributes">
+                    <attribute name="domain">[('state', 'not in', ['close', 'cancelled', 'template'])]</attribute>
+                </field>
+                <field name="user_id" position="attributes">
                     <attribute name="groups">project.group_project_manager</attribute>
                 </field>
-                <field name = "project_id" position="attributes" >
+                <field name="project_id" position="attributes">
                     <attribute name="groups">project.group_project_manager</attribute>
                 </field>
-                <field name = "priority" position="attributes" >
+                <field name="priority" position="attributes">
                     <attribute name="groups">project.group_project_manager</attribute>
                 </field>
-                <field name = "date_deadline"  position="after">
-                        <field name="priority" attrs="{'readonly':[('state','in',['done', 'cancelled'])]}" />
+                <field name="date_deadline" position="after">
+                    <field name="priority" attrs="{'readonly':[('state','in',['done', 'cancelled'])]}"/>
                 </field>
             </field>
         </record>
@@ -97,9 +110,6 @@
                 </field>
             </field>
         </record>-->
-        
-        
-        
-        
+
     </data>
 </openerp>
