--- a/account_invoice_extended/views/account_move_journal_view.xml
+++ b/account_invoice_extended/views/account_move_journal_view.xml
@@ -9,39 +9,37 @@
             <field name="arch" type="xml">
                 <search string="Search Journal Items">
 
-                        <filter icon="terp-document-new" string="Unbalanced" domain="[('state','=','draft')]"
-                                help="Unbalanced Journal Items"/>
-                        <separator orientation="vertical"/>
-                        <filter icon="terp-document-new" string="Unposted" domain="[('move_id.state','=','draft')]"
-                                help="Unposted Journal Items"/>
-                        <filter name="posted" icon="terp-camera_test" string="Posted"
-                                domain="[('move_id.state','=','posted')]" help="Posted Journal Items"/>
-                        <separator orientation="vertical"/>
-                        <field name="date_from" filter_domain="[('date','&gt;=',self)]"/>
-                        <field name="date_to" filter_domain="[('date','&lt;=',self)]"/>
-                        <separator orientation="vertical"/>
-                        <filter
-                                icon="terp-dolar_ok!"
-                                string="Unreconciled"
-                                domain="[('reconcile_id','=',False), ('account_id.reconcile','=',True)]"
-                                help="Unreconciled Journal Items"
-                                name="unreconciled"/>
-                        <newline/>
-                        <field name="move_id" string="Number (Move)"/>
-                        <field name="date"/>
-                        <field name="account_id"/>
-                        <field name="partner_id">
-                            <filter help="Next Partner Entries to reconcile" name="next_partner"
-                                    context="{'next_partner_only': 1}" icon="terp-gtk-jump-to-ltr"
-                                    domain="[('account_id.reconcile','=',True),('reconcile_id','=',False)]"/>
-                        </field>
-
+                    <filter icon="terp-document-new" string="Unbalanced" domain="[('state','=','draft')]"
+                            help="Unbalanced Journal Items"/>
+                    <separator orientation="vertical"/>
+                    <filter icon="terp-document-new" string="Unposted" domain="[('move_id.state','=','draft')]"
+                            help="Unposted Journal Items"/>
+                    <filter name="posted" icon="terp-camera_test" string="Posted"
+                            domain="[('move_id.state','=','posted')]" help="Posted Journal Items"/>
+                    <separator orientation="vertical"/>
+                    <field name="date_from" filter_domain="[('date','&gt;=',self)]"/>
+                    <field name="date_to" filter_domain="[('date','&lt;=',self)]"/>
+                    <separator orientation="vertical"/>
+                    <filter
+                            icon="terp-dolar_ok!"
+                            string="Unreconciled"
+                            domain="[('reconcile_id','=',False), ('account_id.reconcile','=',True)]"
+                            help="Unreconciled Journal Items"
+                            name="unreconciled"/>
+                    <newline/>
+                    <field name="move_id" string="Number (Move)"/>
+                    <field name="date"/>
+                    <field name="account_id"/>
+                    <field name="partner_id">
+                        <filter help="Next Partner Entries to reconcile" name="next_partner"
+                                context="{'next_partner_only': 1}" icon="terp-gtk-jump-to-ltr"
+                                domain="[('account_id.reconcile','=',True),('reconcile_id','=',False)]"/>
+                    </field>
 
                     <newline/>
 
-
-                        <field name="journal_id" widget="selection" context="{'journal_id':self}"/>
-                        <field name="period_id" context="{'period_id':self}"/>
+                    <field name="journal_id" widget="selection" context="{'journal_id':self}"/>
+                    <field name="period_id" context="{'period_id':self}"/>
 
                     <newline/>
                     <group expand="0" string="Group By...">
@@ -61,7 +59,7 @@
         </record>
 
         <record id="account.action_account_manual_reconcile" model="ir.actions.act_window">
-            <field name="context">{'view_mode': True, 'nodelete': '1', 'nocreate': '1', 'noduplicate': '1'}</field>
+            <field name="context">{'search_default_unreconciled':1, 'view_mode': True, 'nodelete': '1', 'nocreate': '1', 'noduplicate': '1'}</field>
             <field name="domain=">[('account_id.reconcile','=',True)]</field>
             <field name="search_view_id" ref="view_account_move_line_filter"/>
         </record>
