--- a/work_order/views/res_company_view.xml
+++ b/work_order/views/res_company_view.xml
@@ -20,7 +20,7 @@
                         <field name="work_order_default_task_ids" colspan="4" nolabel="1" attrs="{'invisible':[('create_task', '=', False)]}">
                             <tree string="Default Work Order Tasks" editable="bottom">
                                 <field name="name"/>
-                                <field name="planned_hours" />
+                                <field name="planned_hours" widget="float_time"/>
                                 <field name="user_id" />
                             </tree>
                         </field>
