--- a/project_extended/views/project_task.xml
+++ b/project_extended/views/project_task.xml
@@ -13,6 +13,7 @@
                     <field name="date_deadline"/>
                 </field>
                 <field name="project_id" position="replace"/>
+                <field name="date_deadline" position="replace"/>
             </field>
         </record>
 
