error on tree color

--- a/web_client/ea_web-github/addons/web/static/src/css/base.css
+++ b/web_client/ea_web-github/addons/web/static/src/css/base.css
@@ -1510,7 +1510,7 @@ label.error {
 }
 
 .openerp table.oe_frame .oe-listview-content td {
-    /*color: inherit;*/
+    color: inherit;
 }
 
 .blockUI.blockOverlay {
