--- a/web_client/ea_web-github/addons/web/static/src/css/base.css
+++ b/web_client/ea_web-github/addons/web/static/src/css/base.css
@@ -50,7 +50,9 @@ body.openerp {
     width: 100%;
     /*max-width: 1024px;*/
     padding: 0 8px 8px 8px;
-    border: 1px solid #222222;
+    border: 1px solid #d6d7da;
+    border-color: #e5e6e9 #dfe0e4 #d0d1d5;
+    border-radius: 3px;
     border-top: 0px;
     background: #f9f9f9
 }
@@ -488,6 +490,7 @@ label.error {
     font-size: small;
     border: 1px solid #FFF;
     white-space: nowrap;
+    border-radius: 3px;
 }
 
 .openerp .menu a:hover,
